[gd_scene load_steps=4 format=3 uid="uid://c6wxv62ba8qvf"]

[ext_resource type="Script" uid="uid://cc3hhbu1giegj" path="res://main_menu.gd" id="1_06t4h"]
[ext_resource type="AudioStream" uid="uid://6xc4qmhixxy0" path="res://audio/Jes√∫s Lastra - Heatstroke.mp3" id="2_7vrkn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.117647, 0.117647, 0.156863, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_06t4h")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7vrkn")

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 759.0
offset_top = 288.0
offset_right = 1010.0
offset_bottom = 578.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.41275, 1.17014)
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 80
text = "PONG"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Single Player"

[node name="TwoPlayerButton" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Two Player"

[node name="QuitButton" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_7vrkn")
volume_db = -10.0
autoplay = true
